--- a/Overview/1.what-we-mean-by-spring.md
+++ b/Overview/1.what-we-mean-by-spring.md
@@ -1,4 +1,4 @@
-# "Spring" 代表什么
+# 1."Spring" 代表什么
 
 ”Spring“这个词在不同的环境中代表不同的含义。最开始的时候，它指的是Spring框架项目本身，但是随着时间的推移，又发展了其他的Spring项目。所以当现在我们提起”Spring“的时候，它指的是整个Spring家族。
 我们的这个Spring参考指南指的是一切Spring的基础：Spring Framework。
