--- a/Core/1.2Container-Overview.md
+++ b/Core/1.2Container-Overview.md
@@ -54,8 +54,157 @@ id属性的值是指协作对象。此例中没有显示用于引用协作对象
 
 ## 1.2.2. 实例化一个容器
 
+容器的构造函数可以接收各种外部资源的配置元数据来实例化一个容器，例如本地文件系统、Java类路径等。
+
+~~~
+ApplicationContext context = new ClassPathXmlApplicationContext("services.xml", "daos.xml");
+~~~
+
+以下例子展示了如何配置服务层对象（services.xml）：
+
+~~~
+<?xml version="1.0" encoding="UTF-8"?>
+<beans xmlns="http://www.springframework.org/schema/beans"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://www.springframework.org/schema/beans
+        https://www.springframework.org/schema/beans/spring-beans.xsd">
+
+    <!-- services -->
+
+    <bean id="petStore" class="org.springframework.samples.jpetstore.services.PetStoreServiceImpl">
+        <property name="accountDao" ref="accountDao"/>
+        <property name="itemDao" ref="itemDao"/>
+        <!-- additional collaborators and configuration for this bean go here -->
+    </bean>
+
+    <!-- more bean definitions for services go here -->
+
+</beans>
+~~~
+
+以下示例显示了数据访问对象daos.xml文件：
+
+~~~
+<?xml version="1.0" encoding="UTF-8"?>
+<beans xmlns="http://www.springframework.org/schema/beans"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://www.springframework.org/schema/beans
+        https://www.springframework.org/schema/beans/spring-beans.xsd">
+
+    <bean id="accountDao"
+        class="org.springframework.samples.jpetstore.dao.jpa.JpaAccountDao">
+        <!-- additional collaborators and configuration for this bean go here -->
+    </bean>
+
+    <bean id="itemDao" class="org.springframework.samples.jpetstore.dao.jpa.JpaItemDao">
+        <!-- additional collaborators and configuration for this bean go here -->
+    </bean>
+
+    <!-- more bean definitions for data access objects go here -->
+
+</beans>
+~~~
+
+在前面的例子中，服务层由PetStoreServiceImpl类和两个类型为JpaAccountDao和JpaItemDao（基于jpa对象关系映射标准）的数据访问对象组成。property name元素引用了JavaBean的名字，ref元素引用另一个bean定义的名称。id和ref元素之间的链接表示协作对象之间的依赖关系。有关配置对象依赖项的详细信息，请参阅[依赖](1.4Dependencies.md)。
+
+**构建基于XML的配置元数据**
+
+让一个文件中定义的bean可以在多个XML文件使用是非常有用的。通常，架构中的逻辑层或模块都可以用单独的XML配置文件来表示。
+您可以使用应用程序上下文构造函数从这些XML配置文件中加载bean。如上一节提到的，这个构造函数可以接收多个资源地址。
+如果不想使用构造函数，可以使用一个或多个<import/>元素从另一个或多个文件加载bean定义。下面例子展示了如何执行此操作：
+
+~~~
+<beans>
+    <import resource="services.xml"/>
+    <import resource="resources/messageSource.xml"/>
+    <import resource="/resources/themeSource.xml"/>
+
+    <bean id="bean1" class="..."/>
+    <bean id="bean2" class="..."/>
+</beans>
+~~~
+
+在前面的示例中，外部bean定义是从三个文件加载的：services.xml、messagesource.xml和themesource.xml。所有位置路径都与执行导入的定义文件相关，因此services.xml必须与执行导入的文件位于同一目录或类路径位置，而messagesource.xml和themesource.xml必须位于导入文件位置下方的资源位置。如您所见，messageSource.xml的前导斜杠被忽略了。但是，因为我们使用的是相对路径，所以最好不要使用斜线。
+
+根据Spring Schema的定义，要导入的文件的内容（包括顶层的<beans/>元素）必须是有效的XML bean。
+
+
+    可以（但不推荐）使用相对的“..”路径引用父目录中的文件。这样做会创建对当前应用程序外部文件的依赖关系。特别的，不建议使用这样的引用classpath:urls（例如classpath:../services.xml），因为程序在运行中解析时，将优先选择“最近”的classpath根目录，然后才会查看其父目录。当类路径配置发送变化时可能导致选择到不正确的目录。
+    
+    您可以使用完全限定的资源位置，而不是相对路径：例如，文件：c:/config/services.xml或classpath:/config/services.xml。但是这样会将您的应用程序的配置耦合到特定的绝对位置。通常情况下，最好通过在运行时根据JVM系统属性解析的“$…”占位符，来为此类绝对位置保留间接寻址。
 
 
 
+命名空间本身提供了导入指令功能。在Spring提供的一系列XML名称空间中，除了纯bean定义之外，还提供了其他配置功能，例如Context和Util名称空间。
+
+**groovy bean定义DSL**
+
+作为外部配置元数据的另一个例子，bean也可以用Spring的Groovy Bean定义DSL来表示，这在grails框架中是很常见的。通常，这种配置存在一个“.groovy”文件中，其结构如以下示例所示：
+
+~~~
+beans {
+    dataSource(BasicDataSource) {
+        driverClassName = "org.hsqldb.jdbcDriver"
+        url = "jdbc:hsqldb:mem:grailsDB"
+        username = "sa"
+        password = ""
+        settings = [mynew:"setting"]
+    }
+    sessionFactory(SessionFactory) {
+        dataSource = dataSource
+    }
+    myService(MyService) {
+        nestedBean = { AnotherBean bean ->
+            dataSource = dataSource
+        }
+    }
+}
+~~~
+
+这种配置风格在很大程度上相当于XML bean定义，甚至支持Spring的XML配置名称空间。它还允许通过import beans指令导入XML bean定义文件。
+
+##1.2.3. 使用容器
+
+ApplicationContext是高级工厂的接口，它能够维护不同bean的注册及其依赖。通过使用方法`T getBean(String name, Class<T> requiredType)`，获取到bean的实例。
+ApplicationContext允许您读取bean定义并访问它们，如下例所示：
+
+```
+// create and configure beans
+ApplicationContext context = new ClassPathXmlApplicationContext("services.xml", "daos.xml");
+
+// retrieve configured instance
+PetStoreService service = context.getBean("petStore", PetStoreService.class);
+
+// use configured instance
+List<String> userList = service.getUsernameList();
+```
+
+使用Groovy配置，跟XML看起来非常相似。它有一个不同的上下文实现类，它支持Groovy（但也理解XML bean定义）。下面的示例显示了groovy配置：
+
+```
+ApplicationContext context = new GenericGroovyApplicationContext("services.groovy", "daos.groovy");
+```
+
+最灵活的是GenericApplicationContext与reader delegates结合使用，例如使用XmlBeanDefinitionReader 来加载XML文件，如下示例所示：
+
+
+```
+GenericApplicationContext context = new GenericApplicationContext();
+new XmlBeanDefinitionReader(context).loadBeanDefinitions("services.xml", "daos.xml");
+context.refresh();
+```
+
+你也可以使用GroovyBeanDefinitionReader来加载Groovy文件，如下所示：
+
+
+```
+GenericApplicationContext context = new GenericApplicationContext();
+new GroovyBeanDefinitionReader(context).loadBeanDefinitions("services.groovy", "daos.groovy");
+context.refresh();
+```
+
+您可以在同一ApplicationContext中混合使用这样的Reader，从不同的配置源读取bean定义。
+
+然后可以使用getBean来获取到bean的实例。ApplicationContext接口还有一些其他的方法来获取bean，但理想情况下，您的应用程序代码不应该使用它们。实际上，您的应用程序代码根本不应该调用getBean（）方法，因此完全不依赖于SpringAPI。例如，Spring与Web框架的集成为各种Web框架组件（如控制器和JSF管理的bean）提供了依赖注入，允许您通过元数据（如自动注解方式）声明对特定bean的依赖。
 
 
