--- a/Core/1.3Bean-Overview.md
+++ b/Core/1.3Bean-Overview.md
@@ -237,7 +237,8 @@ public class DefaultServiceLocator {
 
 
 ```
-在Spring文档中，“factory bean”是指在Spring容器中配置的bean，它通过实例或静态工厂方法创建对象。相比之下，FactoryBean（注意大写）是指Spring中的FactoryBean类。
+在Spring文档中，“factory bean”是指在Spring容器中配置的bean，它通过实例或静态工厂方法创建对象。
+相比之下，FactoryBean（注意大写）是指Spring中的FactoryBean类。
 ```
 
 
