--- a/Core/1.5Bean-Scopes.md
+++ b/Core/1.5Bean-Scopes.md
@@ -1,1 +1,51 @@
-# 
+# 1.5 Bean作用域
+
+当您创建一个bean定义时，您将创建一个recipe用来创建由该bean定义的类的实际实例。bean定义是一个recipe的想法很重要，因为这意味着，和类一样，您可以从一个recipe创建多个对象实例。
+
+您不仅可以控制要插入到从特定bean定义创建的对象中的各种依赖项和配置值，还可以控制从特定bean定义创建的对象的范围。这种方法是强大和灵活的，因为您可以通过配置来选择您创建的对象的作用域，而不必在Java类级别对对象作用域进行设置。bean可以选择被部署在任何一个作用域中。
+
+Spring框架支持六个作用域，其中四个作用域仅在使用Wweb-aware的ApplicationContext时可用。当然，你可以创建自定义作用域。
+
+下表介绍了支持的作用域：
+
+**Table 3. Bean Scope	**
+
+| 作用域 | 描述 |
+| --- | --- |
+| singleton | （默认）Spring IOC容器将单个bean定义绑定到单个对象实例。 |
+|prototype|单个bean定义可以被绑定到多个对象实例|
+|request|单个bean定义被绑定到单个的Http请求生命周期。就是每一次HTTP请求都有属于他自己的单独实例创建，这个只在web-aware的Spring ApplicationContext中有效。|
+|session|单个bean的定义会被绑定到Http Session的生命周期中，这个只在web-aware的Spring ApplicationContext中有效。|
+|application|单个bean的定义会被绑定到ServletContext的生命周期中，这个只在web-aware的Spring ApplicationContext中有效。|
+|websocket|单个bean的定义会被绑定到WebSocket的生命周期中，这个只在web-aware的Spring ApplicationContext中有效。|
+
+
+
+```
+从Spring3.0开始，添加了thread作用域，但默认情况下不被注册：请参阅SimpleThreadScope。
+从Spring4.2开始，添加了transaction作用域：SimpleTransactionScope。有关如何注册这些或任何其他自定义范围的说明，请参阅使用自定义范围。
+
+```
+
+##1.5.1 Singleton作用域
+
+只会创建一个singleton bean的共享实例，所有与该bean ID相匹配的bean的请求都会导致Spring容器返回这个特定的bean实例。
+
+换句话说，当您定义一个bean定义并且它的作用域是Singleton时，Spring IOC容器只创建由该bean定义的对象的一个实例。这个单个实例存储在这样的单实例bean的缓存中，所有随后的请求和对这个名为bean的请求都返回缓存的对象。下图显示了Singleton作用域的工作方式：
+
+![](https://docs.spring.io/spring/docs/5.1.8.RELEASE/spring-framework-reference/images/singleton.png)
+
+Spring对单例bean的概念不同于《Gang of Four (GoF) 》一书中定义的单例模式。gof singleton硬编码对象的作用域，这样每个类加载器只能创建一个特定类的实例。Spring Singleton的范围是针对于每个容器和每个bean的。这意味着，如果在单个Spring容器中为特定类定义一个bean，那么Spring容器将创建由该bean定义的类的一个且仅一个实例。单例作用域是Spring中的默认作用域。要在XML中将bean定义为singleton，如下例所示：
+
+
+```
+<bean id="accountService" class="com.something.DefaultAccountService"/>
+
+<!-- the following is equivalent, though redundant (singleton scope is the default) -->
+<bean id="accountService" class="com.something.DefaultAccountService" scope="singleton"/>
+
+```
+
+
+
+
