--- a/Core/1.4Dependencies.md
+++ b/Core/1.4Dependencies.md
@@ -327,6 +327,504 @@ public class ExampleBean {
 
 ```
 
+bean定义中指定的构造函数参数用作ExampleBean的构造函数的参数。
+
+现在考虑这个例子的一个变体，在这里，Spring不是使用构造函数，而是调用一个静态工厂方法来返回对象的一个实例：
+
+
+```
+<bean id="exampleBean" class="examples.ExampleBean" factory-method="createInstance">
+    <constructor-arg ref="anotherExampleBean"/>
+    <constructor-arg ref="yetAnotherBean"/>
+    <constructor-arg value="1"/>
+</bean>
+
+<bean id="anotherExampleBean" class="examples.AnotherBean"/>
+<bean id="yetAnotherBean" class="examples.YetAnotherBean"/>
+
+```
+
+下面是ExampleBean的例子：
+
+
+```
+public class ExampleBean {
+
+    // a private constructor
+    private ExampleBean(...) {
+        ...
+    }
+
+    // a static factory method; the arguments to this method can be
+    // considered the dependencies of the bean that is returned,
+    // regardless of how those arguments are actually used.
+    public static ExampleBean createInstance (
+        AnotherBean anotherBean, YetAnotherBean yetAnotherBean, int i) {
+
+        ExampleBean eb = new ExampleBean (...);
+        // some other operations...
+        return eb;
+    }
+}
+
+```
+
+
+静态工厂方法的参数由<constructor-arg/>元素提供，与实际使用的构造函数完全相同。工厂方法返回的类的类型不必与包含静态工厂方法的类的类型相同（尽管在本例中是这样）。实例（非静态）工厂方法可以以基本相同的方式使用（除了使用factory-bean属性而不是class属性），因此我们不在这里讨论这些细节。
+
+## 1.4.2 依赖和配置的细节
+
+如上节所示，自定义的Bean属性或者构造函数参数可以引用其他被管理的Bean，或者定义内联的值。Spring基于XML的配置元数据可以在<property/>和<constructor-arg/>元素中的配置子元素类型来实现这一功能。
+
+**直接值（基本类型，字符串或者其他）**
+
+<property/>元素的value属性将属性或构造函数参数指定为人类可读的字符串表示形式。Spring的转换服务用于将这些值从字符串转换为属性或参数的实际类型。以下示例显示了正在设置的各种值：
+
+
+```
+<bean id="myDataSource" class="org.apache.commons.dbcp.BasicDataSource" destroy-method="close">
+    <!-- results in a setDriverClassName(String) call -->
+    <property name="driverClassName" value="com.mysql.jdbc.Driver"/>
+    <property name="url" value="jdbc:mysql://localhost:3306/mydb"/>
+    <property name="username" value="root"/>
+    <property name="password" value="masterkaoli"/>
+</bean>
+```
+
+下面的例子使用了更简洁的p-namespace例子：
+
+
+```
+<beans xmlns="http://www.springframework.org/schema/beans"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xmlns:p="http://www.springframework.org/schema/p"
+    xsi:schemaLocation="http://www.springframework.org/schema/beans
+    https://www.springframework.org/schema/beans/spring-beans.xsd">
+
+    <bean id="myDataSource" class="org.apache.commons.dbcp.BasicDataSource"
+        destroy-method="close"
+        p:driverClassName="com.mysql.jdbc.Driver"
+        p:url="jdbc:mysql://localhost:3306/mydb"
+        p:username="root"
+        p:password="masterkaoli"/>
+
+</beans>
+```
+
+上面的XML更加简洁。但是，除非您使用一个IDE（如Intellij IDEA或Spring工具套件），在创建bean定义时支持自动完成属性，否则只能在运行时而不是设计时发现拼写错误。强烈建议使用这样的IDE协助开发。
+
+你也可以配置一个java.util.Properties实例如下：
+
+```
+<bean id="mappings"
+    class="org.springframework.beans.factory.config.PropertyPlaceholderConfigurer">
+
+    <!-- typed as a java.util.Properties -->
+    <property name="properties">
+        <value>
+        jdbc.driver.className=com.mysql.jdbc.Driver
+jdbc.url=jdbc:mysql://localhost:3306/mydb
+        </value>
+    </property>
+</bean>
+
+```
+
+Spring容器使用JavaBeans属性编辑器机制将<value/>元素中的文本转换为java.util.properties实例。这是一个很好的快捷方式，也是Spring团队支持使用嵌套的<value/>元素而不是value属性样式的少数地方之一。
+
+**idref元素**
+
+idref元素是将容器中另一个bean的id（字符串值，而不是引用）传递给<constructor-arg/>或<property/>元素的一种简单的防止错误方法。下面的示例演示如何使用它：
+
+
+```
+<bean id="theTargetBean" class="..."/>
+
+<bean id="theClientBean" class="...">
+    <property name="targetName">
+        <idref bean="theTargetBean"/>
+    </property>
+</bean>
+```
+前面的bean定义片段（在运行时）与以下片段完全等效：
+
+```
+<bean id="theTargetBean" class="..." />
+
+<bean id="client" class="...">
+    <property name="targetName" value="theTargetBean"/>
+</bean>
+
+```
+第一个表单比第二个表单更好，因为使用idref标记可以让容器在部署时验证引用的、bean是否实际存在。在第二个例子中，不会对传递给客户机bean的targetName属性的值执行任何验证。只有当客户端bean实际被实例化时，才会发现拼写错误（最有可能是致命的结果）。如果客户端bean是prototype类型的bean，那么只有在部署容器很长时间之后，才会发现这种类型和产生的异常。
+
+
+```
+4.0 beans xsd不再支持idref元素的local属性，因为它不再提供常规bean引用的值。在升级到4.0模式时，请将idref local修改对idref bean。
+```
+
+<idref/>元素的一个常用的作用（至少在Spring2.0之前的版本中）是在用在ProxyFactoryBean中定义的AOP拦截器里。指定拦截器名称时使用<idref/>元素可防止您拼写错误拦截器ID。
+
+**引用其他的Beans**
+
+ref元素是<constructor-arg/>或<property/>定义元素中的最后一个元素。在这里，您将bean的指定属性的值设置为对容器管理的另一个bean（合作者）的引用。引用的bean是要设置其属性的bean的依赖项，在设置该属性之前，需要对其进行初始化。（如果合作者是单例bean，那么它可能已经由容器初始化。）所有引用最终都是对另一个对象的引用。作用域和验证会根据您通过bean、local或parent属性来指定另一个对象的ID或name而做相应的变动。
+
+通过<ref/>标记的bean属性指定目标bean是最通用的形式，允许在同一容器或父容器中创建对任何bean的引用，而不管它是否在同一XML文件中。bean属性的值可以与目标bean的id属性相同，也可以与目标bean的name属性中的一个值相同。以下示例显示如何使用ref元素：
+
+
+```
+<ref bean="someBean"/>
+```
+
+通过parent属性指定目标bean将创建对当前容器的父容器中的bean的引用。父属性的值可以与目标bean的id属性或目标bean的name属性中的一个值相同。目标bean必须位于当前bean的父容器中。
+当你使用层级的容器结构时，并且希望用与父bean同名的代理将现有bean包装在父容器中时，就可以使用parent属性。下面展示了如何使用父属性：
+
+
+```
+<!-- in the parent context -->
+<bean id="accountService" class="com.something.SimpleAccountService">
+    <!-- insert dependencies as required as here -->
+</bean>
+```
+
+
+```
+<!-- in the child (descendant) context -->
+<bean id="accountService" <!-- bean name is the same as the parent bean -->
+    class="org.springframework.aop.framework.ProxyFactoryBean">
+    <property name="target">
+        <ref parent="accountService"/> <!-- notice how we refer to the parent bean -->
+    </property>
+    <!-- insert other configuration and dependencies as required here -->
+</bean>
+```
+
+**内部Beans**
+
+在<property/> 或者 <constructor-arg/>元素内部的<bean/>元素定义了一个内部bean,下面是个例子：
+
+
+```
+<bean id="outer" class="...">
+    <!-- instead of using a reference to a target bean, simply define the target bean inline -->
+    <property name="target">
+        <bean class="com.example.Person"> <!-- this is the inner bean -->
+            <property name="name" value="Fiona Apple"/>
+            <property name="age" value="25"/>
+        </bean>
+    </property>
+</bean>
+```
+
+内部bean定义不需要ID或名称。如果指定，容器也不会使用这个值作为标识符。容器在创建时也忽略范围标志，因为内部bean总是匿名的，并且总是用外部bean创建的。不可能单独访问内部bean，也不可能将它们注入到除封闭bean之外的协作bean中。
+
+可以接收来自自定义范围的destruction回调，例如，对于包含在单例bean的请求范围内的内部bean。内部bean实例的创建与它的包含bean绑定在一起，但是destruction回调让它可以接入请求范围的生命周期。这不是一个常见的场景。内部bean通常只共享其包含bean的范围。
+
+**集合**
+
+<list/>, <set/>, <map/>,和 <props/> 分别被用来设置Java Collection类型List, Set, Map，和 Properties 类型的属性和参数。 下面是个例子：
+
+
+```
+<bean id="moreComplexObject" class="example.ComplexObject">
+    <!-- results in a setAdminEmails(java.util.Properties) call -->
+    <property name="adminEmails">
+        <props>
+            <prop key="administrator">administrator@example.org</prop>
+            <prop key="support">support@example.org</prop>
+            <prop key="development">development@example.org</prop>
+        </props>
+    </property>
+    <!-- results in a setSomeList(java.util.List) call -->
+    <property name="someList">
+        <list>
+            <value>a list element followed by a reference</value>
+            <ref bean="myDataSource" />
+        </list>
+    </property>
+    <!-- results in a setSomeMap(java.util.Map) call -->
+    <property name="someMap">
+        <map>
+            <entry key="an entry" value="just some string"/>
+            <entry key ="a ref" value-ref="myDataSource"/>
+        </map>
+    </property>
+    <!-- results in a setSomeSet(java.util.Set) call -->
+    <property name="someSet">
+        <set>
+            <value>just some string</value>
+            <ref bean="myDataSource" />
+        </set>
+    </property>
+</bean>
+```
+
+下面的属性可以作为map的key或者value， 也可以作为set的value:
+
+
+```
+bean | ref | idref | list | set | map | props | value | null
+```
+
+**集合合并**
+
+Spring容器还支持合并集合。应用程序开发人员可以定义父级<list/>、<map/>、<set/>或<props/>元素，并让子级<list/>、<map/>、<set/>或<props/>元素继承和重写父集合中的值。也就是说，子集合的值是合并父集合和子集合的元素的结果，而子集合元素覆盖父集合中指定的值。
+
+本节讨论合并的父子bean机制。不熟悉父bean和子bean定义的读者可能希望在继续之前阅读相关部分。
+
+下面的示例演示集合合并：
+
+
+```
+<beans>
+    <bean id="parent" abstract="true" class="example.ComplexObject">
+        <property name="adminEmails">
+            <props>
+                <prop key="administrator">administrator@example.com</prop>
+                <prop key="support">support@example.com</prop>
+            </props>
+        </property>
+    </bean>
+    <bean id="child" parent="parent">
+        <property name="adminEmails">
+            <!-- the merge is specified on the child collection definition -->
+            <props merge="true">
+                <prop key="sales">sales@example.com</prop>
+                <prop key="support">support@example.co.uk</prop>
+            </props>
+        </property>
+    </bean>
+<beans>
+```
+注意在子bean定义的adminEmails属性的<props/>元素上使用了merge=true属性。当子bean由容器解析和实例化时，生成的实例具有一个adminEmails属性集合，该集合包含将子级的adminEmails集合与父级的adminEmails集合合并的结果。以下列表显示了结果：
+
+
+```
+administrator=administrator@example.com
+sales=sales@example.com
+support=support@example.co.uk
+```
+
+子属性集合的值集继承父集合中的所有属性元素，子集合的支持值覆盖父集合中的值。
+
+这种合并行为同样适用于<list/>、<map/>和<set/>集合类型。<list/>元素比较特殊（即值是有序集合），父列表的值会位于子列表的所有值之前。对于映射、集合和属性集合类型，不存在排序。因此，对于容器内部使用的关联映射、集合和属性实现类型的基础集合类型，没有有效的排序语义。
+
+**集合合并的限制**
+
+不能合并不同的集合类型（如映射和列表）。如果您尝试这样做，就会抛出一个异常。合并属性必须在继承子对象上定义。在父集合定义上指定合并属性是多余的，不会导致所需的合并。
+
+**强类型集合**
+
+通过在Java 5中引入泛型类型，可以使用强类型集合。也就是说，可以声明集合类型，使其只能包含（例如）字符串元素。如果使用Spring将强类型集合注入bean，则可以利用Spring的类型转换支持，以便在将强类型集合实例的元素添加到集合之前将其转换为适当的类型。下面的Java类和bean定义显示了如何这样做：
+
+
+```
+public class SomeClass {
+
+    private Map<String, Float> accounts;
+
+    public void setAccounts(Map<String, Float> accounts) {
+        this.accounts = accounts;
+    }
+}
+```
+
+
+```
+<beans>
+    <bean id="something" class="x.y.SomeClass">
+        <property name="accounts">
+            <map>
+                <entry key="one" value="9.99"/>
+                <entry key="two" value="2.75"/>
+                <entry key="six" value="3.99"/>
+            </map>
+        </property>
+    </bean>
+</beans>
+```
+
+当something bean的accounts属性准备好注入时，关于强类型map<String, Float>的元素类型的泛型信息可以通过反射获得。因此，Spring的类型转换基础结构将各种值元素识别为float类型，并将字符串值（9.99、2.75和3.99）转换为实际的float类型。
+
+**Null和Empty字符串值**
+
+Spring将属性和参数的空值视为空Strings。以下基于XML的配置元数据片段将email属性设置为空字符串值（“”）。
+
+
+```
+<bean class="ExampleBean">
+    <property name="email" value=""/>
+</bean>
+```
+
+上面的例子相当于下面的例子：
+
+```
+exampleBean.setEmail("");
+```
+
+<null/> 元素表示null值看如下所示：
+
+
+```
+<bean class="ExampleBean">
+    <property name="email">
+        <null/>
+    </property>
+</bean>
+```
+
+上面例子相当于：
+
+
+```
+exampleBean.setEmail(null);
+```
+
+**p-namespace的XML快捷方式**
+
+p-namespace允许您使用bean元素的属性（而不是嵌套的<property/>元素）来描述协作bean或属性值。
+Spring支持基于XML模式定义的带有命名空间的可扩展配置格式。本章讨论的bean配置格式在XML模式文档中定义。但是，p-namespace没有在xsd文件中定义，并且只存在于spring的核心中。
+
+下面的示例显示了两个解析为相同结果的XML片段（第一个使用标准XML格式，第二个使用P命名空间）：
+
+
+```
+<beans xmlns="http://www.springframework.org/schema/beans"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xmlns:p="http://www.springframework.org/schema/p"
+    xsi:schemaLocation="http://www.springframework.org/schema/beans
+        https://www.springframework.org/schema/beans/spring-beans.xsd">
+
+    <bean name="classic" class="com.example.ExampleBean">
+        <property name="email" value="someone@somewhere.com"/>
+    </bean>
+
+    <bean name="p-namespace" class="com.example.ExampleBean"
+        p:email="someone@somewhere.com"/>
+</beans>
+```
+
+该示例在bean定义中显示了p-namespace中名为email的属性。这告诉Spring这是一个属性申明。如前所述，p-namespace没有模式定义，因此可以将property name设置为属性名。
+
+下一个示例包括另外两个bean定义，它们都引用了另一个bean：
+
+
+```
+<beans xmlns="http://www.springframework.org/schema/beans"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xmlns:p="http://www.springframework.org/schema/p"
+    xsi:schemaLocation="http://www.springframework.org/schema/beans
+        https://www.springframework.org/schema/beans/spring-beans.xsd">
+
+    <bean name="john-classic" class="com.example.Person">
+        <property name="name" value="John Doe"/>
+        <property name="spouse" ref="jane"/>
+    </bean>
+
+    <bean name="john-modern"
+        class="com.example.Person"
+        p:name="John Doe"
+        p:spouse-ref="jane"/>
+
+    <bean name="jane" class="com.example.Person">
+        <property name="name" value="Jane Doe"/>
+    </bean>
+</beans>
+```
+
+此示例不仅包括使用p-namespace的属性值，还使用特殊格式声明属性引用。第一个bean定义使用<property name="spouse" ref="jane"/>创建从bean john到bean jane的引用，但是第二个bean定义使用p:spouse ref=“jane”作为属性来执行完全相同的操作。在这种情况下，spouse是属性名，而-ref部分表明这不是一个直接值，而是对另一个bean的引用。
+
+
+```
+p-namespace不如标准XML格式灵活。例如，声明属性引用的格式与以ref结尾的属性冲突，而标准XML格式则不冲突。我们建议您仔细选择方法，并将其传达给您的团队成员，以避免生成同时使用这三种方法的XML文档。
+```
+
+**c-namespace的XML快捷方式**
+
+和前面的p-namespace一样，Spring 3.1引入的c-namespace允许内联属性配置构造函数参数，而不是嵌套的constructor-arg元素。下面是例子：
+
+
+```
+<beans xmlns="http://www.springframework.org/schema/beans"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xmlns:c="http://www.springframework.org/schema/c"
+    xsi:schemaLocation="http://www.springframework.org/schema/beans
+        https://www.springframework.org/schema/beans/spring-beans.xsd">
+
+    <bean id="beanTwo" class="x.y.ThingTwo"/>
+    <bean id="beanThree" class="x.y.ThingThree"/>
+
+    <!-- traditional declaration with optional argument names -->
+    <bean id="beanOne" class="x.y.ThingOne">
+        <constructor-arg name="thingTwo" ref="beanTwo"/>
+        <constructor-arg name="thingThree" ref="beanThree"/>
+        <constructor-arg name="email" value="something@somewhere.com"/>
+    </bean>
+
+    <!-- c-namespace declaration with argument names -->
+    <bean id="beanOne" class="x.y.ThingOne" c:thingTwo-ref="beanTwo"
+        c:thingThree-ref="beanThree" c:email="something@somewhere.com"/>
+
+</beans>
+```
+
+c：命名空间和p：命名空间有一样的约定，比如通过名字设置构造函数时（-ref 代表着引用），同样的，虽然他没有在XSD规范中定义（存在Spring Core中），但是必须在XML文件中声明。
+
+对于构造函数参数名不可用的少数情况（通常如果编译字节码时没有调试信息），可以回退到参数索引，如下所示：
+
+
+```
+<!-- c-namespace index declaration -->
+<bean id="beanOne" class="x.y.ThingOne" c:_0-ref="beanTwo" c:_1-ref="beanThree"
+    c:_2="something@somewhere.com"/>
+```
+
+由于XML语法的原因，index需要有前导字符_，因为XML属性名不能以数字开头（即使某些IDE允许这样做）。相应的索引表示也可用于<constructor arg>元素，但不常用，因为简单顺序通常就足够了。
+
+在实践中，构造函数解析机制在匹配参数方面非常有效，因此，除非确实需要，否则我们建议通过配置使用name。
+
+**复合属性名称**
+
+设置bean properties时，可以使用复合或嵌套的属性名，只要路径的所有组件（最终属性名除外）不为null。考虑以下bean定义：
+
+
+```
+<bean id="something" class="things.ThingOne">
+    <property name="fred.bob.sammy" value="123" />
+</bean>
+```
+
+something bean有一个fred属性，fred有个bob属性，bob有个sammy属性，最终sammy被设置为123，在构造bean之后，something的fred属性和fred的bob属性不能为空。否则，将引发NullPointerException。
+
+## 1.4.3 使用depends-on
+
+如果一个bean是另一个bean的依赖项，这通常意味着一个bean被设置为另一个bean的属性。通常，您可以使用基于XML的配置元数据中的<ref/>元素来实现这一点。然而，有时bean之间的依赖关系并不直接。例如，当类中的静态初始值设定项需要触发时，例如数据库驱动程序注册。depends-on属性可以显式强制一个或多个bean在使用此元素的bean初始化之前进行初始化。以下示例使用depends-on属性表示对单个bean的依赖：
+
+
+```
+<bean id="beanOne" class="ExampleBean" depends-on="manager"/>
+<bean id="manager" class="ManagerBean" />
+```
+
+要表示对多个bean的依赖关系，请提供一个bean名称列表作为depends-on属性的值（逗号、空白和分号都是有效的分隔符）：
+
+
+```
+<bean id="beanOne" class="ExampleBean" depends-on="manager,accountDao">
+    <property name="manager" ref="manager" />
+</bean>
+
+<bean id="manager" class="ManagerBean" />
+<bean id="accountDao" class="x.y.jdbc.JdbcAccountDao" />
+```
+
+```
+depends-on属性既可以指定初始化时间依赖项，也可以指定相应的销毁时间依赖项（仅在单例bean的情况下）。定义与给定bean的依赖关系的依赖bean在给定bean本身被销毁之前首先被销毁。因此，depends-on还可以控制关机顺序。
+
+```
+
+
 
 
 
