--- a/Core/1.4Dependencies.md
+++ b/Core/1.4Dependencies.md
@@ -461,6 +461,116 @@ idref元素是将容器中另一个bean的id（字符串值，而不是引用）
 
 
 
+```
+4.0 beans xsd不再支持idref元素的local属性，因为它不再提供常规bean引用的值。在升级到4.0模式时，请将idref local修改对idref bean。
+```
+
+<idref/>元素的一个常用的作用（至少在Spring2.0之前的版本中）是在用在ProxyFactoryBean中定义的AOP拦截器里。指定拦截器名称时使用<idref/>元素可防止您拼写错误拦截器ID。
+
+**引用其他的Beans**
+
+ref元素是<constructor-arg/>或<property/>定义元素中的最后一个元素。在这里，您将bean的指定属性的值设置为对容器管理的另一个bean（合作者）的引用。引用的bean是要设置其属性的bean的依赖项，在设置该属性之前，需要对其进行初始化。（如果合作者是单例bean，那么它可能已经由容器初始化。）所有引用最终都是对另一个对象的引用。作用域和验证会根据您通过bean、local或parent属性来指定另一个对象的ID或name而做相应的变动。
+
+通过<ref/>标记的bean属性指定目标bean是最通用的形式，允许在同一容器或父容器中创建对任何bean的引用，而不管它是否在同一XML文件中。bean属性的值可以与目标bean的id属性相同，也可以与目标bean的name属性中的一个值相同。以下示例显示如何使用ref元素：
+
+
+```
+<ref bean="someBean"/>
+```
+
+通过parent属性指定目标bean将创建对当前容器的父容器中的bean的引用。父属性的值可以与目标bean的id属性或目标bean的name属性中的一个值相同。目标bean必须位于当前bean的父容器中。
+当你使用层级的容器结构时，并且希望用与父bean同名的代理将现有bean包装在父容器中时，就可以使用parent属性。下面展示了如何使用父属性：
+
+
+```
+<!-- in the parent context -->
+<bean id="accountService" class="com.something.SimpleAccountService">
+    <!-- insert dependencies as required as here -->
+</bean>
+```
+
+
+```
+<!-- in the child (descendant) context -->
+<bean id="accountService" <!-- bean name is the same as the parent bean -->
+    class="org.springframework.aop.framework.ProxyFactoryBean">
+    <property name="target">
+        <ref parent="accountService"/> <!-- notice how we refer to the parent bean -->
+    </property>
+    <!-- insert other configuration and dependencies as required here -->
+</bean>
+```
+
+**内部Beans**
+
+在<property/> 或者 <constructor-arg/>元素内部的<bean/>元素定义了一个内部bean,下面是个例子：
+
+
+```
+<bean id="outer" class="...">
+    <!-- instead of using a reference to a target bean, simply define the target bean inline -->
+    <property name="target">
+        <bean class="com.example.Person"> <!-- this is the inner bean -->
+            <property name="name" value="Fiona Apple"/>
+            <property name="age" value="25"/>
+        </bean>
+    </property>
+</bean>
+```
+
+内部bean定义不需要ID或名称。如果指定，容器也不会使用这个值作为标识符。容器在创建时也忽略范围标志，因为内部bean总是匿名的，并且总是用外部bean创建的。不可能单独访问内部bean，也不可能将它们注入到除封闭bean之外的协作bean中。
+
+可以接收来自自定义范围的destruction回调，例如，对于包含在单例bean的请求范围内的内部bean。内部bean实例的创建与它的包含bean绑定在一起，但是destruction回调让它可以接入请求范围的生命周期。这不是一个常见的场景。内部bean通常只共享其包含bean的范围。
+
+**集合**
+
+<list/>, <set/>, <map/>,和 <props/> 分别被用来设置Java Collection类型List, Set, Map，和 Properties 类型的属性和参数。 下面是个例子：
+
+
+```
+<bean id="moreComplexObject" class="example.ComplexObject">
+    <!-- results in a setAdminEmails(java.util.Properties) call -->
+    <property name="adminEmails">
+        <props>
+            <prop key="administrator">administrator@example.org</prop>
+            <prop key="support">support@example.org</prop>
+            <prop key="development">development@example.org</prop>
+        </props>
+    </property>
+    <!-- results in a setSomeList(java.util.List) call -->
+    <property name="someList">
+        <list>
+            <value>a list element followed by a reference</value>
+            <ref bean="myDataSource" />
+        </list>
+    </property>
+    <!-- results in a setSomeMap(java.util.Map) call -->
+    <property name="someMap">
+        <map>
+            <entry key="an entry" value="just some string"/>
+            <entry key ="a ref" value-ref="myDataSource"/>
+        </map>
+    </property>
+    <!-- results in a setSomeSet(java.util.Set) call -->
+    <property name="someSet">
+        <set>
+            <value>just some string</value>
+            <ref bean="myDataSource" />
+        </set>
+    </property>
+</bean>
+```
+
+下面的属性可以作为map的key或者value， 也可以作为set的value:
+
+
+```
+bean | ref | idref | list | set | map | props | value | null
+```
+
+
+
+
 
 
 
