--- a/Core/1.4Dependencies.md
+++ b/Core/1.4Dependencies.md
@@ -566,7 +566,154 @@ ref元素是<constructor-arg/>或<property/>定义元素中的最后一个元素
 
 ```
 bean | ref | idref | list | set | map | props | value | null
+
 ```
+
+
+**集合合并**
+
+Spring容器还支持合并集合。应用程序开发人员可以定义父级<list/>、<map/>、<set/>或<props/>元素，并让子级<list/>、<map/>、<set/>或<props/>元素继承和重写父集合中的值。也就是说，子集合的值是合并父集合和子集合的元素的结果，而子集合元素覆盖父集合中指定的值。
+
+本节讨论合并的父子bean机制。不熟悉父bean和子bean定义的读者可能希望在继续之前阅读相关部分。
+
+下面的示例演示集合合并：
+
+
+```
+<beans>
+    <bean id="parent" abstract="true" class="example.ComplexObject">
+        <property name="adminEmails">
+            <props>
+                <prop key="administrator">administrator@example.com</prop>
+                <prop key="support">support@example.com</prop>
+            </props>
+        </property>
+    </bean>
+    <bean id="child" parent="parent">
+        <property name="adminEmails">
+            <!-- the merge is specified on the child collection definition -->
+            <props merge="true">
+                <prop key="sales">sales@example.com</prop>
+                <prop key="support">support@example.co.uk</prop>
+            </props>
+        </property>
+    </bean>
+<beans>
+
+```
+注意在子bean定义的adminEmails属性的<props/>元素上使用了merge=true属性。当子bean由容器解析和实例化时，生成的实例具有一个adminEmails属性集合，该集合包含将子级的adminEmails集合与父级的adminEmails集合合并的结果。以下列表显示了结果：
+
+
+```
+administrator=administrator@example.com
+sales=sales@example.com
+support=support@example.co.uk
+```
+
+子属性集合的值集继承父集合中的所有属性元素，子集合的支持值覆盖父集合中的值。
+
+这种合并行为同样适用于<list/>、<map/>和<set/>集合类型。<list/>元素比较特殊（即值是有序集合），父列表的值会位于子列表的所有值之前。对于映射、集合和属性集合类型，不存在排序。因此，对于容器内部使用的关联映射、集合和属性实现类型的基础集合类型，没有有效的排序语义。
+
+**集合合并的限制**
+
+不能合并不同的集合类型（如映射和列表）。如果您尝试这样做，就会抛出一个异常。合并属性必须在继承子对象上定义。在父集合定义上指定合并属性是多余的，不会导致所需的合并。
+
+**强类型集合**
+
+通过在Java 5中引入泛型类型，可以使用强类型集合。也就是说，可以声明集合类型，使其只能包含（例如）字符串元素。如果使用Spring将强类型集合注入bean，则可以利用Spring的类型转换支持，以便在将强类型集合实例的元素添加到集合之前将其转换为适当的类型。下面的Java类和bean定义显示了如何这样做：
+
+
+```
+public class SomeClass {
+
+    private Map<String, Float> accounts;
+
+    public void setAccounts(Map<String, Float> accounts) {
+        this.accounts = accounts;
+    }
+}
+```
+
+
+```
+<beans>
+    <bean id="something" class="x.y.SomeClass">
+        <property name="accounts">
+            <map>
+                <entry key="one" value="9.99"/>
+                <entry key="two" value="2.75"/>
+                <entry key="six" value="3.99"/>
+            </map>
+        </property>
+    </bean>
+</beans>
+```
+
+当something bean的accounts属性准备好注入时，关于强类型map<String, Float>的元素类型的泛型信息可以通过反射获得。因此，Spring的类型转换基础结构将各种值元素识别为float类型，并将字符串值（9.99、2.75和3.99）转换为实际的float类型。
+
+**Null和Empty字符串值**
+
+Spring将属性和参数的空值视为空Strings。以下基于XML的配置元数据片段将email属性设置为空字符串值（“”）。
+
+
+```
+<bean class="ExampleBean">
+    <property name="email" value=""/>
+</bean>
+```
+
+上面的例子相当于下面的例子：
+
+```
+exampleBean.setEmail("");
+```
+
+<null/> 元素表示null值看如下所示：
+
+
+```
+<bean class="ExampleBean">
+    <property name="email">
+        <null/>
+    </property>
+</bean>
+```
+
+上面例子相当于：
+
+
+```
+exampleBean.setEmail(null);
+```
+
+**p-namespace的XML快捷方式**
+
+p-namespace允许您使用bean元素的属性（而不是嵌套的<property/>元素）来描述协作bean或属性值。
+Spring支持基于XML模式定义的带有命名空间的可扩展配置格式。本章讨论的bean配置格式在XML模式文档中定义。但是，p-namespace没有在xsd文件中定义，并且只存在于spring的核心中。
+
+下面的示例显示了两个解析为相同结果的XML片段（第一个使用标准XML格式，第二个使用P命名空间）：
+
+
+```
+<beans xmlns="http://www.springframework.org/schema/beans"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xmlns:p="http://www.springframework.org/schema/p"
+    xsi:schemaLocation="http://www.springframework.org/schema/beans
+        https://www.springframework.org/schema/beans/spring-beans.xsd">
+
+    <bean name="classic" class="com.example.ExampleBean">
+        <property name="email" value="someone@somewhere.com"/>
+    </bean>
+
+    <bean name="p-namespace" class="com.example.ExampleBean"
+        p:email="someone@somewhere.com"/>
+</beans>
+```
+
+该示例在bean定义中显示了p-namespace中名为email的属性。这告诉Spring这是一个属性申明。如前所述，p-namespace没有模式定义，因此可以将property name设置为属性名。
+
+下一个示例包括另外两个bean定义，它们都引用了另一个bean：
+
 
 
 
