--- a/Core/1.4Dependencies.md
+++ b/Core/1.4Dependencies.md
@@ -775,6 +775,35 @@ p-namespace不如标准XML格式灵活。例如，声明属性引用的格式与
 ```
 
 
+c：命名空间和p：命名空间有一样的约定，比如通过名字设置构造函数时（-ref 代表着引用），同样的，虽然他没有在XSD规范中定义（存在Spring Core中），但是必须在XML文件中声明。
+
+对于构造函数参数名不可用的少数情况（通常如果编译字节码时没有调试信息），可以回退到参数索引，如下所示：
+
+
+```
+<!-- c-namespace index declaration -->
+<bean id="beanOne" class="x.y.ThingOne" c:_0-ref="beanTwo" c:_1-ref="beanThree"
+    c:_2="something@somewhere.com"/>
+```
+
+由于XML语法的原因，index需要有前导字符_，因为XML属性名不能以数字开头（即使某些IDE允许这样做）。相应的索引表示也可用于<constructor arg>元素，但不常用，因为简单顺序通常就足够了。
+
+在实践中，构造函数解析机制在匹配参数方面非常有效，因此，除非确实需要，否则我们建议通过配置使用name。
+
+**复合属性名称**
+
+设置bean properties时，可以使用复合或嵌套的属性名，只要路径的所有组件（最终属性名除外）不为null。考虑以下bean定义：
+
+
+```
+<bean id="something" class="things.ThingOne">
+    <property name="fred.bob.sammy" value="123" />
+</bean>
+```
+
+something bean有一个fred属性，fred有个bob属性，bob有个sammy属性，最终sammy被设置为123，在构造bean之后，something的fred属性和fred的bob属性不能为空。否则，将引发NullPointerException。
+
+
 
 
 
