--- a/Core/1.4Dependencies.md
+++ b/Core/1.4Dependencies.md
@@ -775,7 +775,7 @@ p-namespace不如标准XML格式灵活。例如，声明属性引用的格式与
 ```
 
 
-c：命名空间和p：命名空间有一样的约定，比如通过名字设置构造函数时（-ref 代表着引用），同样的，虽然他没有在XSD规范中定义（存在Spring Core中），但是必须在XML文件中声明。
+c命名空间和p命名空间有一样的约定，比如通过名字设置构造函数时（-ref 代表着引用），同样的，虽然他没有在XSD规范中定义（存在Spring Core中），但是必须在XML文件中声明。
 
 对于构造函数参数名不可用的少数情况（通常如果编译字节码时没有调试信息），可以回退到参数索引，如下所示：
 
