--- a/Core/1.4Dependencies.md
+++ b/Core/1.4Dependencies.md
@@ -781,6 +781,14 @@ c命名空间和p命名空间有一样的约定，比如通过名字设置构造
 
 
 
+```
+<!-- c-namespace index declaration -->
+<bean id="beanOne" class="x.y.ThingOne" c:_0-ref="beanTwo" c:_1-ref="beanThree"
+    c:_2="something@somewhere.com"/>
+```
+
+
+
 
 
 
