--- a/Core/1.4Dependencies.md
+++ b/Core/1.4Dependencies.md
@@ -788,7 +788,7 @@ c命名空间和p命名空间有一样的约定，比如通过名字设置构造
 ```
 
 
-由于XML语法的原因，index需要有前导字符_，因为XML属性名不能以数字开头（即使某些IDE允许这样做）。相应的索引表示也可用于<constructor arg>元素，但不常用，因为简单顺序通常就足够了。
+由于XML语法的原因，index需要有前导字符_，因为XML属性名不能以数字开头（即使某些IDE允许这样做）。相应的索引表示也可用于<constructor-arg>元素，但不常用，因为简单顺序通常就足够了。
 
 在实践中，构造函数解析机制在匹配参数方面非常有效，因此，除非确实需要，否则我们建议通过配置使用name。
 
