--- a/Core/1.4Dependencies.md
+++ b/Core/1.4Dependencies.md
@@ -793,6 +793,351 @@ c命名空间和p命名空间有一样的约定，比如通过名字设置构造
 在实践中，构造函数解析机制在匹配参数方面非常有效，因此，除非确实需要，否则我们建议通过配置使用name。
 
 
+**复合属性名称**
+
+设置bean properties时，可以使用复合或嵌套的属性名，只要路径的所有组件（最终属性名除外）不为null。考虑以下bean定义：
+
+
+```
+<bean id="something" class="things.ThingOne">
+    <property name="fred.bob.sammy" value="123" />
+</bean>
+```
+
+something bean有一个fred属性，fred有个bob属性，bob有个sammy属性，最终sammy被设置为123，在构造bean之后，something的fred属性和fred的bob属性不能为空。否则，将引发NullPointerException。
+
+## 1.4.3 使用depends-on
+
+如果一个bean是另一个bean的依赖项，这通常意味着一个bean被设置为另一个bean的属性。通常，您可以使用基于XML的配置元数据中的<ref/>元素来实现这一点。然而，有时bean之间的依赖关系并不直接。例如，当类中的静态初始值设定项需要触发时，例如数据库驱动程序注册。depends-on属性可以显式强制一个或多个bean在使用此元素的bean初始化之前进行初始化。以下示例使用depends-on属性表示对单个bean的依赖：
+
+
+```
+<bean id="beanOne" class="ExampleBean" depends-on="manager"/>
+<bean id="manager" class="ManagerBean" />
+```
+
+要表示对多个bean的依赖关系，请提供一个bean名称列表作为depends-on属性的值（逗号、空白和分号都是有效的分隔符）：
+
+
+```
+<bean id="beanOne" class="ExampleBean" depends-on="manager,accountDao">
+    <property name="manager" ref="manager" />
+</bean>
+
+<bean id="manager" class="ManagerBean" />
+<bean id="accountDao" class="x.y.jdbc.JdbcAccountDao" />
+```
+
+```
+depends-on属性既可以指定初始化时间依赖项，也可以指定相应的销毁时间依赖项（仅在单例bean的情况下）。定义与给定bean的依赖关系的依赖bean在给定bean本身被销毁之前首先被销毁。因此，depends-on还可以控制关机顺序。
+
+```
+
+**惰性初始化bean**
+
+默认情况下，ApplicationContext作为初始化过程的一部分，以预实例化的方式建和配置所有的单例bean。一般来说，我们提倡这种预实例化方式，因为如果配置或周围环境发送错误会立即被发现，而不是几小时甚至几天之后。如果不想使用这种方式，可以通过将bean定义标记为lazy-initialized来防止单例bean的预实例化。一个lazy-initialized bean告诉IOC容器在第一次请求bean实例时创建它，而不是在启动时。
+
+在XML中，此行为由<bean/>元素上的lazy-init 属性控制，如下示例所示：
+
+
+```
+<bean id="lazy" class="com.something.ExpensiveToCreateBean" lazy-init="true"/>
+<bean name="not.lazy" class="com.something.AnotherBean"/>
+
+```
+
+当ApplicationContext使用前面的配置时，当ApplicationContext启动时，lazy bean不会被预先实例化，而not.lazy bean则会被预先实例化。
+
+但是，当一个惰性初始化bean是一个非惰性初始化的singleton bean的依赖项时，ApplicationContext会在启动时创建惰性初始化bean，因为它必须满足singleton的依赖项。惰性初始化bean被注入到其他非惰性初始化的单例bean中。
+
+您还可以通过在<beans/>元素上使用默认的lazy init属性在容器级别控制lazy初始化，下面的示例显示：
+
+
+```
+<beans default-lazy-init="true">
+    <!-- no beans will be pre-instantiated... -->
+</beans>
+```
+
+**1.4.5.自动装载合作者**
+
+Spring容器可以自动连接协作bean之间的关系。通过检查ApplicationContext的内容，可以让Spring自动解析bean的合作者（其他bean）。自动装载具有以下优点：
+* 自动装载可以显著减少指定属性或构造函数参数。（本章其他地方讨论的bean模板等其他机制在这方面也很有价值。）
+* 自动装载可以随着对象的发展更新配置。例如，如果需要向类添加依赖项，则可以自动满足该依赖项，而无需修改配置。因此，自动装载在开发期间尤其有用，也不需要在代码库变得更稳定时切换到显式装配。
+
+使用基于XML的配置元数据（请参见依赖注入）时，可以使用<bean/>元素的autowire属性为bean定义指定autowire模式。autowiring功能有四种模式。您可以为每个bean指定autowiring，从而可以选择要autowiring的对象。下表介绍了四种autowiring模式：
+
+**Table 2. Autowiring modes**
+
+
+| 模式 | 说明 |
+| --- | --- |
+| no | （默认）无自动装载。bean必须引用由ref定义的元素。对于较大的部署，不建议更改默认设置，因为显式指定合作者可以提供更大的控制度和清晰性。在某种程度上，它记录了系统的结构。 |
+| byName | 按属性名称自动装载。Spring寻找与需要自动装载的属性同名的bean。例如，如果bean定义被设置为按名称自动装载，并且它包含一个master属性（即，它有一个setMaster（..）方法），那么spring将查找名为master的bean定义并使用它来设置该属性。 |
+| byType |如果容器中只有一个属性类型的bean，则允许自动装载属性。如果存在多个，则会引发一个致命的异常，这表示您不能为该bean使用byType自动装载。如果没有匹配的bean，则不会发生任何事情（未设置属性）。  |
+|constructor  | 类似于byType，但适用于构造函数参数。如果容器中不只有一个构造函数参数类型的bean，则会引发致命错误。 |
+
+使用byType或构造函数自动装载模式，可以装载数组和类型化集合。在这种情况下，将提供容器中与预期类型匹配的所有满足自动装载的候选者，以满足依赖关系。如果所需的键类型为字符串，则可以自动装载强类型Map实例。自动装载的Map实例的值由匹配预期类型的所有bean实例组成，并且Map实例的键是相应的bean名称。
+
+
+**自动装载的限制和缺陷**
+
+自动装载在一个项目中持续使用时效果最好。如果一般不使用自动装载，或者只使用它来装载一个或两个bean定义，开发人员会很困惑。
+
+自动装载的局限性和缺点：
+
+* property和constructor-arg设置中的显式依赖项始终会覆盖自动装载。不能自动装载简单属性，如基元、Strings和Classes（以及此类简单属性的数组）。这是设计上的限制。
+
+* 自动装载不如显式装载精确。尽管如前表所述，Spring谨慎地避免猜测，以防出现可能产生意外的歧义结果。但是您的Spring管理对象之间的关系将不会在文档中明确标出。
+
+* 有些工具可能无法为自动装载生成相应的文档
+
+* 可以与setter方法或要自动注入的构造函数参数类型可能与容器中的多个bean定义相匹配。如果是数组、集合或映射实例，这没有问题。但是，对于期望单个值的依赖项，这种模糊性会引发异常。
+
+在最后一种情况中，您有几个选项：
+
+* 放弃自动注入，取而代之的是显式注入。
+* 通过将bean定义的autowire候选属性设置为false，避免自动注入bean定义，如下一节所述。
+* 通过将<bean/>元素的primary属性设置为true，将单个bean指定为主要候选对象。
+* 使用基于注解的配置中可用的更细粒度的控件
+
+**从自动装载中排除Bean**
+
+您可以从自动装载中排除bean。在Spring的XML格式中，将<bean/>元素的autowire-candidate属性设置为false。则这个bean在自动装载时将会不可用（包括注解样式的配置，如@autowired）。
+
+
+```
+autowire-candidate属性设计为只影响type-based的自动注解。它不会影响显式的按名字的引用，即使指定的bean没有标记为autowire候选对象，这些引用也会得到解析。因此，如果名称匹配，则按name自动装载仍会注入bean。
+
+```
+
+您还可以根据模式匹配来限制自动装载的候选对象。顶级的<beans/>元素在其默认的default-autowire-candidates属性中接受一个或多个模式。例如，要将autowire候选状态限制为名称以Repository结尾的任何bean，请提供值*Repository。要提供多个模式，请在逗号分隔的列表中定义它们。
+
+如果显示的设定bean的autowire-candidate属性为true或false那么模式匹配规则将失效。
+
+这些技术对于您不希望通过自动注解注入其他bean的bean很有用。这并不意味着被排除的bean本身不能通过使用自动注解进行配置。只是说明这个bean并不是自动注解其他bean的候选者。
+
+##1.4.6. 方法注入
+
+在大多数应用程序场景中，容器中的大多数bean都是单例的。当一个单例bean需要与另一个单例bean协作，或者一个非单例bean需要与另一个非单例bean协作时，通常通过将一个bean定义为另一个bean的属性来处理依赖关系。当bean的生命周期不同时，就会出现一个问题。假设singleton bean a需要使用非singleton（原型）bean b，可能在a上的每个方法调用上都需要使用b。容器只创建一次singleton bean a，因此只获得一次设置属性的机会。容器不能在每次需要bean B时向bean A提供一个新的bean B实例。
+
+解决办法是放弃一些控制反转。您可以通过实现ApplicationContextAware接口使bean aware容器，每次bean a需要b时，通过对容器进行getbean（“b”）调用来请求（通常是新的）bean b实例。下面的示例显示了这种方法：
+
+
+```
+// a class that uses a stateful Command-style class to perform some processing
+package fiona.apple;
+
+// Spring-API imports
+import org.springframework.beans.BeansException;
+import org.springframework.context.ApplicationContext;
+import org.springframework.context.ApplicationContextAware;
+
+public class CommandManager implements ApplicationContextAware {
+
+    private ApplicationContext applicationContext;
+
+    public Object process(Map commandState) {
+        // grab a new instance of the appropriate Command
+        Command command = createCommand();
+        // set the state on the (hopefully brand new) Command instance
+        command.setState(commandState);
+        return command.execute();
+    }
+
+    protected Command createCommand() {
+        // notice the Spring API dependency!
+        return this.applicationContext.getBean("command", Command.class);
+    }
+
+    public void setApplicationContext(
+            ApplicationContext applicationContext) throws BeansException {
+        this.applicationContext = applicationContext;
+    }
+}
+
+
+```
+
+
+这种方法并不可取的，因为业务代码和Spring框架产生了耦合。方法注入是Spring IoC 容器的一个高级特性，它可以很好的处理这种情况。
+
+**查找方法注入**
+
+查找方法注入是指容器重写container-managed bean上的方法，并返回容器中另一个命名bean。查找通常涉及一个原型bean，如前一节中描述的场景中所示。Spring框架通过使用cglib库中的字节码动态生成覆盖该方法的子类来实现该方法注入。
+
+
+```
+
+* 为了使这个动态子类工作，SpringBean容器子类不能是final类，要重写的方法也不能是final类。
+* 单元测试具有抽象方法的类需要您自己对类进行子类化，并提供抽象方法的stub实现。
+* 组件扫描还需要具体的方法，这会提供给具体的类来使用。
+* 另一个关键限制是查找方法不适用于工厂方法，尤其不适用于配置类中的@bean方法，因为在这种情况下，容器不负责创建实例，因此无法动态创建运行时生成的子类。
+
+```
+
+对于前面代码段中的CommandManager类，Spring容器会动态重写createCommand（）方法的实现。CommandManager类没有任何Spring依赖项，正如重新编写的示例所示：
+
+
+```
+package fiona.apple;
+
+// no more Spring imports!
+
+public abstract class CommandManager {
+
+    public Object process(Object commandState) {
+        // grab a new instance of the appropriate Command interface
+        Command command = createCommand();
+        // set the state on the (hopefully brand new) Command instance
+        command.setState(commandState);
+        return command.execute();
+    }
+
+    // okay... but where is the implementation of this method?
+    protected abstract Command createCommand();
+}
+```
+
+在包含要注入的方法的客户类（本例中为CommandManager）中，要注入的方法需要以下形式的签名：
+
+
+```
+<public|protected> [abstract] <return-type> theMethodName(no-arguments);
+```
+
+如果方法是抽象的，动态生成的子类会自动实现该方法。否则会将其覆盖。下面是例子：
+
+
+```
+<!-- a stateful bean deployed as a prototype (non-singleton) -->
+<bean id="myCommand" class="fiona.apple.AsyncCommand" scope="prototype">
+    <!-- inject dependencies here as required -->
+</bean>
+
+<!-- commandProcessor uses statefulCommandHelper -->
+<bean id="commandManager" class="fiona.apple.CommandManager">
+    <lookup-method name="createCommand" bean="myCommand"/>
+</bean>
+```
+
+标识为commandManager的bean在需要myCommand bean的新实例时调用自己的createCommand（）方法。如果实际上需要这样做，那么必须将myCommand bean部署为原型。如果它是单例的，则每次返回相同的myCommand bean实例。
+
+或者，在基于注解的组件模型中，可以通过@Lookup annotation声明查找方法，如下例所示：
+
+
+```
+public abstract class CommandManager {
+
+    public Object process(Object commandState) {
+        Command command = createCommand();
+        command.setState(commandState);
+        return command.execute();
+    }
+
+    @Lookup("myCommand")
+    protected abstract Command createCommand();
+}
+```
+
+或者，您可以依赖目标bean根据lookup方法声明的返回类型进行解析：
+
+
+```
+public abstract class CommandManager {
+
+    public Object process(Object commandState) {
+        MyCommand command = createCommand();
+        command.setState(commandState);
+        return command.execute();
+    }
+
+    @Lookup
+    protected abstract MyCommand createCommand();
+}
+```
+
+
+注意，通常应该用具体的存根实现声明这种带注释的查找方法，以便它们与Spring的组件扫描规则兼容，默认情况下抽象类会被忽略。此限制不适用于显式注册或显式导入的bean类。
+
+```
+访问不同作用域目标bean的另一种方法是ObjectFactory/Provider注入点。
+
+您还可能发现ServiceLocatorFactoryBean（在org.springframework.beans.factory.config包中）非常有用。
+
+```
+
+**任意方法替换**
+
+与查找方法注入相比，方法注入的一种不太有用的形式是能够用另一个方法替换托管bean中的任意方法。您可以跳过本节的其余部分，直到实际需要此功能为止。
+
+对于基于XML的配置元数据，可以使用replaced-method的方法元素为部署的bean替换现有的方法实现。考虑下面的类，它有一个我们想要重写的名为computeValue的方法：
+
+
+```
+public class MyValueCalculator {
+
+    public String computeValue(String input) {
+        // some real code...
+    }
+
+    // some other methods...
+}
+```
+
+一个实现了org.springframework.beans.factory.support.MethodReplacer接口的类提供了新的方法，如下所示：
+
+
+```
+/**
+ * meant to be used to override the existing computeValue(String)
+ * implementation in MyValueCalculator
+ */
+public class ReplacementComputeValue implements MethodReplacer {
+
+    public Object reimplement(Object o, Method m, Object[] args) throws Throwable {
+        // get the input value, work with it, and return a computed result
+        String input = (String) args[0];
+        ...
+        return ...;
+    }
+}
+```
+
+部署原始类并指定方法重写的bean定义如下所示：
+
+```
+<bean id="myValueCalculator" class="x.y.z.MyValueCalculator">
+    <!-- arbitrary method replacement -->
+    <replaced-method name="computeValue" replacer="replacementComputeValue">
+        <arg-type>String</arg-type>
+    </replaced-method>
+</bean>
+
+<bean id="replacementComputeValue" class="a.b.c.ReplacementComputeValue"/>
+
+```
+
+您可以在<replaced-method/>元素中使用一个或多个<arg-type/>元素来指示要重写的方法的方法签名。只有当方法被重载并且类中存在多个变量时，参数的签名才是必需的。为了方便起见，参数的类型字符串可以是完全限定类型名的子字符串。例如，以下所有内容都匹配java.lang.String：
+
+
+```
+java.lang.String
+String
+Str
+```
+
+因为参数的数量经常足以区分每个可能的选项，所以通过允许输入与参数类型匹配的最短字符串，可以节省大量的输入内容。
+
+
+
+
+
+
+
+
+
+
 
 
 
