--- a/Core/1.5Bean-Scopes.md
+++ b/Core/1.5Bean-Scopes.md
@@ -226,7 +226,21 @@ Spring IOC容器不仅管理对象（bean）的实例化，还管理协作者（
 </beans>
 ```
 
-要创建这样的代理，可以将一个子<aop:scoped proxy/>元素插入到作用域bean定义中（请参见选择要创建的代理类型和基于XML模式的配置）。为什么在请求、会话和自定义范围级别定义范围的bean需要<aop:scoped proxy/>元素？考虑下面的singleton bean定义，并将其与您需要为上述范围定义的内容进行对比（请注意，下面的userpreferences bean定义并不完整）：
+要创建这样的代理，可以将一个子<aop:scoped-proxy/>元素插入到作用域bean定义中（请参见选择要创建的代理类型和基于XML模式的配置）。为什么在请求、会话和自定义范围的bean需要<aop:scoped-proxy/>元素？考虑下面的singleton bean定义，并将其与您需要为上述范围定义的内容进行对比（请注意，下面的userPreferences bean定义并不完整）：
 
+
+```
+<bean id="userPreferences" class="com.something.UserPreferences" scope="session"/>
+
+<bean id="userManager" class="com.something.UserManager">
+    <property name="userPreferences" ref="userPreferences"/>
+</bean>
+
+```
+
+在前面的示例中，singleton bean（UserManager）注入了一个HTTP会话范围的bean（UserPreferences）的引用。这里的问题是，UserManager bean是一个单例：每个容器只实例化一次，它的依赖项（在本例中只有一个，即UserPreferences bean）也只注入一次。这意味着UserManager bean只在完全相同的userpreferences对象（即最初注入它的对象）上操作。
+
+这不是将寿命较短的作用域bean注入寿命较长的作用域bean时需要的行为（例如，将HTTP会话作用域协作bean作为依赖项注入到singleton bean中）。相反，您需要一个UserManager对象，并且在HTTP会话的生命周期中，您需要一个特定于HTTP会话的UserPreferences对象。因此，容器创建一个对象，该对象与UserPreferences类公开完全相同的公共接口（理想情况下是一个UserPreferences实例的对象），该对象可以从作用域机制（HTTP请求、会话等）获取实际的UserPreferences对象。容器将这个代理对象注入到UserManager bean中，后者不知道这个用户首选项引用是代理。在本例中，当一个UserManager实例在依赖项注入的UserPreferences对象上调用一个方法时，它实际上是在代理上调用一个方法。然后，代理从HTTP会话（在本例中）中获取real userpreferences对象，并将方法调用委托给检索到的real userpreferences对象。
+因此，在将请求和会话范围的bean注入协作对象时，您需要以下（正确和完整）配置，如下示例所示：
 
 
